fix gap style

--- a/src/scss/apps.scss
+++ b/src/scss/apps.scss
@@ -390,7 +390,7 @@ main.error {
   position: relative;
   section {
     width: 27.75rem;
-    gap: 3.75rem;
+    gap: 3rem;
     margin-top: 3rem;
   }
   .message-wrapper {
